# xigua-wallet-public

./: .gitignore  .gitleaks.toml  README.md  requirements.txt
.githooks/: pre-commit
.github/workflows/: repo-scans.yml
pocketlunch/: .env.example  .gitignore  CODEX_FLOW_TODO.md  Cargo.toml  DEVELOPMENT.md  Dockerfile  Dockerfile.codex-runner  README.md  docker-compose.yml
pocketlunch/codex-context/: README.md
pocketlunch/migrations/: 0001_init.sql  0002_transactions_query_indexes.sql
pocketlunch/scripts/: start.sh
pocketlunch/src/: audit.rs  config.rs  lib.rs  lm_v2_client.rs  main.rs  models.rs  outbox.rs  service_api.rs  store.rs  sync_engine.rs  timeutil.rs
pocketlunch/tests/: integration_sync.rs  store_logic.rs
scripts/: install-hooks.sh  privacy_scan.py  run_gitleaks.sh  run_privacy_scan.sh  run_repo_scans.sh
